--- a/index.html
+++ b/index.html
@@ -119,8 +119,6 @@
               <li><span class="hours">00</span><p class="hours_text">Jam</p></li>
               <li class="separator">:</li>
               <li><span class="minutes">00</span><p class="minutes_text">Menit</p></li>
-              <li class="separator">:</li>
-              <li><span class="seconds">00</span><p class="seconds_text">Detik</p></li>
             </ul>
             <div class="spasi">
             </div>
@@ -153,6 +151,7 @@
             <br> 
             <div class="simply-countdown"></div>
             <a href="menu.html" class="btn btn-lg mt-4" onclick="playAudio()">Lihat Undangan</a>
+            <!-- <a href="javascript:void(0)" class="btn btn-lg mt-4" onclick="playAudio(); scrollToContent();">Lihat Undangan</a> -->
 
 
 
