--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <!-- Begin Hero Content-->
         <div class="hero-body">
           <div class="container has-text-centered">
-            <!-- <h1 class="subtitle">Undangan Pernikahan</h1>
-            <h2 class="title">Nurul & Angga</h2> -->
+            <h1 class="subtitle">Undangan Pernikahan</h1>
+            <h2 class="title">Nurul & Angga</h2>
            
 
           </div>
